--- a/index.html
+++ b/index.html
@@ -99,6 +99,15 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2016 - December 2020</span></div>
                     </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Southern Methodist University</h3>
+                            <div class="subheading mb-3">Certification</div>
+                            <div>Full-Stack Web Development</div>
+                            <p>GPA: 3.9</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">March 2021 - October 2021</span></div>
+                    </div>
                 </div>
             </section>
             <hr class="m-0" />
@@ -128,7 +137,7 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Functional Teams
+                            Git Version Control
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
