added resume link

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
                 </h1>
                 <div class="subheading mb-5">
                     8600 Thackery Street #5304 · Dallas, TX 75225 · (317) 513-5003 ·
-                    <a href="mailto:mrjam7@gmail.com">mrjam7@gmail.com</a>
+                    <a href="mailto:mrjam7@gmail.com">mrjam7@gmail.com</a>·
+                    <a href="./assets/JamesResume.pdf" target="_blank">RESUME</a>
                 </div>
                 <p class="lead mb-5">Front-end web developer with a background in psychology and cisco networking to
                     bring a unique perspective to building web applications. Recently earned a full-stack certificate
