--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                 </h1>
                 <div class="subheading mb-5">
                     8600 Thackery Street #5304 · Dallas, TX 75225 · (317) 513-5003 ·
-                    <a href="mailto:mrjam7@gmail.com">mrjam7@gmail.com</a>·
-                    <a href="./assets/JamesResume.pdf" target="_blank">RESUME</a>
+                    <a href="mailto:mrjam7@gmail.com" class="text-primary">mrjam7@gmail.com</a>·
+                    <a href="./assets/JamesResume.pdf" class="text-primary" target="_blank">RESUME</a>
                 </div>
                 <p class="lead mb-5">Front-end web developer with a background in psychology and cisco networking to
                     bring a unique perspective to building web applications. Recently earned a full-stack certificate
@@ -70,7 +70,7 @@
         <section class="resume-section" id="experience">
             <div class="resume-section-content">
                 <h2 class="mb-5">Projects</h2>
-                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                <div class="d-flex flex-row flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <div class="card" style="width: 18rem;">
                             <img class="card-img-top" src="./assets/img/kyleharrispic.PNG" alt="Photography Portfolio">
